--- a/CSS/styles2.css
+++ b/CSS/styles2.css
@@ -318,7 +318,7 @@ button{
 }
 
 form{
-  background-color: turquoise;
+  background-color: grey;
   margin: 0 auto;
   align-content: center;
   border-radius: 10px;
