--- a/CSS/styles2.css
+++ b/CSS/styles2.css
@@ -327,7 +327,16 @@ form {
   height: 250px;
 }
 
-button#inici {
+.coordenadas{
+  background-color: gray;
+  margin: 0 auto;
+  border-radius: 10px;
+  border: 1px solid #666666;
+  width: 300px;
+  height: 120px;
+}
+
+.pagina {
   width: 80px;
   height: 40px;
 }
